--- a/miri.html
+++ b/miri.html
@@ -2,8 +2,8 @@
 
 <base href="http://www.miritc.com" />
 <link rel="canonical" href="http://www.miritc.com" />
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="http://www.miritc.com/css/jasny-bootstrap.min.css">
 <link rel="stylesheet" href="http://www.miritc.com/css/flexslider.css" type="text/css">
 <link rel="shortcut icon" href="http://www.miritc.com/skin/img/favicon/favicon_201601121452584529.gif"><link type="text/css" media="all" rel="stylesheet" href="http://www.miritc.com/css/jquery.tosrus.all.css" />
@@ -36,9 +36,8 @@
 <link rel="stylesheet" href="http://www.miritc.com/css/summernote.css" type="text/css">
 <script src="http://www.miritc.com/js/jquery.flexslider-min.js"></script>
 <link type="text/css" rel="stylesheet" href="http://www.miritc.com/css/show_slide/show_slide_m.css">
-	
-			<link type="text/css" rel="stylesheet" href="http://www.miritc.com/css/show_m_menu/show_m_menu_n.css">
-	<script type="text/javascript" src="http://www.miritc.com/js/all.js" charset="utf-8"></script>
+<link type="text/css" rel="stylesheet" href="http://www.miritc.com/css/show_m_menu/show_m_menu_n.css">
+<script type="text/javascript" src="http://www.miritc.com/js/all.js" charset="utf-8"></script>
 <script src="http://www.miritc.com/theme/a/custom.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
