--- a/miri.html
+++ b/miri.html
@@ -2,10 +2,10 @@
 
 <base href="http://www.miritc.com" />
 <link rel="canonical" href="http://www.miritc.com" />
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="http://www.miritc.com/css/jasny-bootstrap.min.css">
-<link rel="stylesheet" href="http://www.miritc.com/css/flexslider.css" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://www.miritc.com/css/jasny-bootstrap.min.css">
+<link rel="stylesheet" href="https://www.miritc.com/css/flexslider.css" type="text/css">
 <link rel="shortcut icon" href="http://www.miritc.com/skin/img/favicon/favicon_201601121452584529.gif"><link type="text/css" media="all" rel="stylesheet" href="http://www.miritc.com/css/jquery.tosrus.all.css" />
 <link type="text/css" media="all" rel="stylesheet" href="http://www.miritc.com/css/slick.css" />
 <link type="text/css" media="all" rel="stylesheet" href="http://www.miritc.com/css/owl.carousel.css" />
