--- a/miri.html
+++ b/miri.html
@@ -23,23 +23,23 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://www.miritc.com/js/hammer.min.js"></script>
-<script type="text/javascript" language="javascript" src="https://www.miritc.com/js/FlameViewportScale.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="https://www.miritc.com/js/owl.carousel.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="https://www.miritc.com/js/slick.min.js"></script>
-<script type="text/javascript" language="javascript" src="https://www.miritc.com/js/jquery.tosrus.min.all.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.0/webfont.js"></script>
-<script type="text/javascript" charset="utf-8" src="https://www.miritc.com/js/bootstrap-datetimepicker.min.js"></script>
-<script src="https://www.miritc.com/js/jasny-bootstrap.min.js"></script>
-<script src="https://www.miritc.com/js/summernote.min.js"></script>
+<script type="text/javascript" src="http://www.miritc.com/js/hammer.min.js"></script>
+<script type="text/javascript" language="javascript" src="http://www.miritc.com/js/FlameViewportScale.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://www.miritc.com/js/owl.carousel.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://www.miritc.com/js/slick.min.js"></script>
+<script type="text/javascript" language="javascript" src="http://www.miritc.com/js/jquery.tosrus.min.all.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/webfont/1.5.0/webfont.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://www.miritc.com/js/bootstrap-datetimepicker.min.js"></script>
+<script src="http://www.miritc.com/js/jasny-bootstrap.min.js"></script>
+<script src="http://www.miritc.com/js/summernote.min.js"></script>
 <link rel="stylesheet" href="https://www.miritc.com/css/summernote.css" type="text/css">
-<script src="https://www.miritc.com/js/jquery.flexslider-min.js"></script>
+<script src="http://www.miritc.com/js/jquery.flexslider-min.js"></script>
 				<link type="text/css" rel="stylesheet" href="https://www.miritc.com/css/show_slide/show_slide_m.css">
 	
 			<link type="text/css" rel="stylesheet" href="https://www.miritc.com/css/show_m_menu/show_m_menu_n.css">
-	<script type="text/javascript" src="https://www.miritc.com/js/all.js" charset="utf-8"></script>
-<script src="https://www.miritc.com/theme/a/custom.js"></script>
+	<script type="text/javascript" src="http://www.miritc.com/js/all.js" charset="utf-8"></script>
+<script src="http://www.miritc.com/theme/a/custom.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	$('.uneven').slick({
