--- a/miri.html
+++ b/miri.html
@@ -2,4 +2,18 @@
 <link rel="canonical" href="http://www.miritc.com" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-this is test page !!!
+<link rel="stylesheet" href="http://www.miritc.com/css/jasny-bootstrap.min.css">
+<link rel="stylesheet" href="http://www.miritc.com/css/flexslider.css" type="text/css">
+<link rel="shortcut icon" href="http://www.miritc.com/skin/img/favicon/favicon_201601121452584529.gif"><link type="text/css" media="all" rel="stylesheet" href="http://www.miritc.com/css/jquery.tosrus.all.css" />
+<link type="text/css" media="all" rel="stylesheet" href="http://www.miritc.com/css/slick.css" />
+<link type="text/css" media="all" rel="stylesheet" href="http://www.miritc.com/css/owl.carousel.css" />
+<link href="http://www.miritc.com/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="http://www.miritc.com/css/plugins/slide-in-panel/style.css" />
+<script type="text/javascript" src="http://www.miritc.com/js/HuskyEZCreator.js" charset="utf-8"></script>
+<link rel="stylesheet" href="http://www.miritc.com/css/animate.min.css">
+<link rel="stylesheet" href="http://www.miritc.com/css/custom.css">
+<link rel="stylesheet" href="http://www.miritc.com/theme/a/custom.css">
+<link rel="stylesheet" href="http://www.miritc.com/skin/custom.css?t=1548748199">
+
+
+this is test page !!! 222
