--- a/miri.html
+++ b/miri.html
@@ -36,5 +36,56 @@
 	<script type="text/javascript" src="http://www.miritc.com/js/all.js" charset="utf-8"></script>
 <script src="http://www.miritc.com/theme/a/custom.js"></script>
 
+<script type="text/javascript">
+$(document).ready(function(){
+	$('.uneven').slick({
+        dots: true,
+        speed: 300,
+        slidesToShow: 4,
+        slidesToScroll: 4,
+		slide : 'div'
+    });
+	$(".slick-track").prop("id","freewall");
+	$('.slick-slide').click(function(){
+		$('.slider a[data-no="'+$(this).attr('data-no')+'"]').click();
+	});
+});
+</script>
+<!--/******************************************************플렉스 슬라이더**********************************************/-->
+<script type="text/javascript">
+$('#myTab a').click(function (e) {
+  e.preventDefault()
+  $(this).tab('show')
+});
+</script>
 
-this is test page !!! 333
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52839620-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<script  language="JavaScript">
+    <!--
+        function  imageView(strImage)
+        {
+        this.document.images['mainImage'].src  =  strImage;
+        }
+    //-->
+	$(window).resize(function(){
+		$(".topmarginLay_a").css("height",$(".navbar-fixed-top").height());
+	});
+	$(window).ready(function(){
+		$(".topmarginLay_a").css("height",$(".navbar-fixed-top").height());
+	});
+	$(window).load(function(){
+		$(".topmarginLay_a").css("height",$(".navbar-fixed-top").height());
+	});
+</script>
+
+this is test page !!! 444
