--- a/miri.html
+++ b/miri.html
@@ -36,56 +36,61 @@
 	<script type="text/javascript" src="http://www.miritc.com/js/all.js" charset="utf-8"></script>
 <script src="http://www.miritc.com/theme/a/custom.js"></script>
 
-<script type="text/javascript">
-$(document).ready(function(){
-	$('.uneven').slick({
-        dots: true,
-        speed: 300,
-        slidesToShow: 4,
-        slidesToScroll: 4,
-		slide : 'div'
-    });
-	$(".slick-track").prop("id","freewall");
-	$('.slick-slide').click(function(){
-		$('.slider a[data-no="'+$(this).attr('data-no')+'"]').click();
-	});
-});
-</script>
-<!--/******************************************************플렉스 슬라이더**********************************************/-->
-<script type="text/javascript">
-$('#myTab a').click(function (e) {
-  e.preventDefault()
-  $(this).tab('show')
-});
-</script>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container">
 
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-52839620-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<script  language="JavaScript">
-    <!--
-        function  imageView(strImage)
-        {
-        this.document.images['mainImage'].src  =  strImage;
-        }
-    //-->
-	$(window).resize(function(){
-		$(".topmarginLay_a").css("height",$(".navbar-fixed-top").height());
-	});
-	$(window).ready(function(){
-		$(".topmarginLay_a").css("height",$(".navbar-fixed-top").height());
-	});
-	$(window).load(function(){
-		$(".topmarginLay_a").css("height",$(".navbar-fixed-top").height());
-	});
-</script>
+	  <div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="http://www.miritc.com/"><img alt="LOGO" src="http://www.miritc.com/skin/img/logo/logo_201601121452583526.jpeg" class="img-responsive"></a>
+		</div>
+		<div class="navbar-collapse collapse">
+			<ul class="nav navbar-nav navbar-right">
+								<li id='m-1' class='dropdown'>
+<a href='#' target='_self' class='m-1 dropdown-toggle' data-toggle='dropdown'>회사소개 <b class='caret'></b></a>
+<ul class='dropdown-menu m-1_sub'>
+<li class='sub_link'><a href='/skin/page/cpysub.html' target='_self' class='m-1' >회사개요</a></li>
+<li class='sub_link'><a href='/skin/page/comhello.html' target='_self' class='m-1' >인사말</a></li>
+<li class='sub_link'><a href='/skin/page/comsine.html' target='_self' class='m-1' >회사연혁</a></li>
+<li class='sub_link'><a href='/mod/contact.html' target='_self' class='m-1' >오시는길</a></li>
+<li class='sub_link'><a href='/skin/page/injae.html' target='_self' class='m-1' >인재채용</a></li>
+</ul>
+</li>
+<li id='m-4' class='dropdown'>
+<a href='#' target='_self' class='m-4 dropdown-toggle' data-toggle='dropdown'>사업영역 <b class='caret'></b></a>
+<ul class='dropdown-menu m-4_sub'>
+<li class='sub_link'><a href='/skin/page/combu.html' target='_self' class='m-4' >SI</a></li>
+<li class='sub_link'><a href='/skin/page/comconsul.html' target='_self' class='m-4' >컨설팅</a></li>
+<li class='sub_link'><a href='/skin/page/comtong.html' target='_self' class='m-4' >통신공사</a></li>
+</ul>
+</li>
+<li id='m-8' class='dropdown'>
+<a href='#' target='_self' class='m-8 dropdown-toggle' data-toggle='dropdown'>제품소개 <b class='caret'></b></a>
+<ul class='dropdown-menu m-8_sub'>
+<li class='sub_link'><a href='/skin/page/comindu.html' target='_self' class='m-8' >Network</a></li>
+<li class='sub_link'><a href='/skin/page/comsecurity.html' target='_self' class='m-8' >security</a></li>
+<li class='sub_link'><a href='/skin/page/CCTV.html' target='_self' class='m-8' >CCTV</a></li>
+</ul>
+</li>
+<li id='m-9' class='dropdown'>
+<a href='#' target='_self' class='m-9 dropdown-toggle' data-toggle='dropdown'>Contact US <b class='caret'></b></a>
+<ul class='dropdown-menu m-9_sub'>
+<li class='sub_link'><a href='/mod/contact_mail.html' target='_self' class='m-9' >고객문의</a></li>
+<li class='sub_link'><a href='/bbs/bbs/?bbs_no=11' target='_self' class='m-9' value='img_bbs_no=11'>회사소개</a></li>
+<li class='sub_link'><a href='/bbs/bbs/?bbs_no=10' target='_self' class='m-9' value='img_bbs_no=10'>NEWS</a></li>
+</ul>
+</li>
+				<li class="divider-vertical"></li>
+				<li><a href='/login.php?rq_url=%2F'>로그인</a></li><li><a href='/join.php?rq_url=%2F'>회원가입</a></li>							</ul>
+		</div>
+	</div>
+	</div>
+<br><!-- Menu End -->
+<div class="topmarginLay_a"></div>
+<div class="container container_slide">
 
 this is test page !!! 444
