--- a/miri.html
+++ b/miri.html
@@ -1,3 +1,5 @@
+
+
 <base href="http://www.miritc.com" />
 <link rel="canonical" href="http://www.miritc.com" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,7 +16,10 @@
 <link rel="stylesheet" href="http://www.miritc.com/css/custom.css">
 <link rel="stylesheet" href="http://www.miritc.com/theme/a/custom.css">
 <link rel="stylesheet" href="http://www.miritc.com/skin/custom.css?t=1548748199">
-
+<!--[if lt IE 9]>
+<script src="http://www.miritc.com/js/html5shiv.js"></script>
+<script src="http://www.miritc.com/js/respond.min.js"></script>
+<![endif]-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -36,6 +41,7 @@
 	<script type="text/javascript" src="http://www.miritc.com/js/all.js" charset="utf-8"></script>
 <script src="http://www.miritc.com/theme/a/custom.js"></script>
 
+<!-- Menu -->
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container">
 
@@ -93,4 +99,218 @@
 <div class="topmarginLay_a"></div>
 <div class="container container_slide">
 
-this is test page !!! 555
+<!-- Body -->
+
+
+		<!-- Slide Image -->
+	<div class="fill">
+		<div id="myCarousel" class="carousel slide">
+			<div class="carousel-inner">
+							<!-- 1st Image -->
+				<div class="item active">
+                                                                      <div class="fill"style="background-image:url('/skin/img/slide/slide_201804041522832045_1'); cursor: pointer;" onclick="location.href='http://www.miritc.com/skin/page/outline.html?sub_id=m-1'">
+                                                                      					<div class="carousel-caption">
+						 
+											</div>
+				  </div>
+				</div>
+				<!-- 1st Image -->
+							<!-- 2nd Image -->
+				<div class="item ">
+				                                      <div class="fill"style="background-image:url('/skin/img/slide/slide_201804041522832045_2'); cursor: pointer;" onclick="location.href='http://www.miritc.com/skin/page/outline.html?sub_id=m-1'">
+                                                                      					<div class="carousel-caption">
+																	</div>
+				  </div>
+				</div>
+				<!-- 2nd Image -->
+							<!-- 3rd Image -->
+				<div class="item ">
+				                                      <div class="fill"style="background-image:url('/skin/img/slide/slide_201804041522832045_3'); cursor: pointer;" onclick="location.href='http://www.miritc.com/skin/page/business_area.html'">
+                                                                      					<div class="carousel-caption">
+																	</div>
+				  </div>
+				</div>
+				<!-- 3rd Image -->
+						</div>
+                        			<div class="pull-center">
+                <a class="carousel-control left" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+                <a class="carousel-control right" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+			</div>
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li><li data-target="#myCarousel" data-slide-to="1"></li><li data-target="#myCarousel" data-slide-to="2"></li>            </ol>
+		</div>
+	</div>
+	<!-- Slide Image -->
+
+
+</div>
+
+<div class="container mobile-btn-layout-container container_mmenu">
+			<div class="mobile-btn-layout text-center">
+				<div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/63b81d.png') !important;"><i class='glyphicon glyphicon-time' style='color:#ffffff !important;'></i></button><br><span>홈</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/63b81d.png') !important;"><i class='glyphicon glyphicon-credit-card' style='color:#ffffff !important;'></i></button><br><span>메뉴1</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/63b81d.png') !important;"><i class='glyphicon glyphicon-home' style='color:#ffffff !important;'></i></button><br><span>메뉴2</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/63b81d.png') !important;"><i class='glyphicon glyphicon-star' style='color:#ffffff !important;'></i></button><br><span>메뉴3</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/338cf8.png') !important;"><i class='glyphicon glyphicon-euro' style='color:#ffffff !important;'></i></button><br><span>메뉴4</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/338cf8.png') !important;"><i class='glyphicon glyphicon-time' style='color:#ffffff !important;'></i></button><br><span>메뉴5</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/338cf8.png') !important;"><i class='glyphicon glyphicon-tags' style='color:#ffffff !important;'></i></button><br><span>메뉴6</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/338cf8.png') !important;"><i class='glyphicon glyphicon-th-large' style='color:#ffffff !important;'></i></button><br><span>메뉴7</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/343434.png') !important;"><i class='glyphicon glyphicon-user' style='color:#ffffff !important;'></i></button><br><span>메뉴8</span></a></div><div class='col-sm-2 col-xs-3 col-lg-2 text-center'><a href='#'><button class='btn btn-default btn-lg' style="background-image:url('/img/m_menu/343434.png') !important;"><i class='glyphicon glyphicon-envelope' style='color:#ffffff !important;'></i></button><br><span>메뉴9</span></a></div>			</div>
+</div>
+<div class="container container_contents">
+    <div class="row intro-board-widget-layout">
+						<div class="col-sm-12 intro-boardbox intro-boardbox-type-bbs intro-boardbox-9"><div class="page-header"><h4>사업영역 <small></small>  <a href="http://www.miritc.com/bbs/bbs/index.php?bbs_no=9" type="button" class="btn pull-right"><i class="fa fa-plus"></i></a></h4></div><div class="row dh-front-blog">                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <a href="http://www.miritc.com/bbs/bbs/view.php?bbs_no=9&data_no=42" class="blogthumb" style="background-image:url('/skin/thumb/그림2.jpg');" alt="/skin/thumb/그림2.jpg" title="/skin/thumb/그림2.jpg"></a>
+                            <a class="caption" href="http://www.miritc.com/bbs/bbs/view.php?bbs_no=9&data_no=42" style="display: block;">
+                                <h5 class="blog-row-subject">SI·NI <small></small></h5>
+                                <p class="blog-row-contents">네트워크 인프라, 보안, 상용 소프트웨어, 시스템, 백업 등 다양한 구축 기술 및 노하우를 기반으로 <b...</p>
+								<p class="blog-row-regdate">2018-04-03</p>
+                            </a>
+                        </div>
+                    </div>                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <a href="http://www.miritc.com/bbs/bbs/view.php?bbs_no=9&data_no=40" class="blogthumb" style="background-image:url('/skin/thumb/slider1.jpg');" alt="/skin/thumb/slider1.jpg" title="/skin/thumb/slider1.jpg"></a>
+                            <a class="caption" href="http://www.miritc.com/bbs/bbs/view.php?bbs_no=9&data_no=40" style="display: block;">
+                                <h5 class="blog-row-subject">Consulting <small></small></h5>
+                                <p class="blog-row-contents">착수준비에서 현황분석 시스템 설계/구축 안정화까지 협의를 통해 SW, HW현황 분석을 하며 호환성 등을 ...</p>
+								<p class="blog-row-regdate">2018-04-03</p>
+                            </a>
+                        </div>
+                    </div>                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <a href="http://www.miritc.com/bbs/bbs/view.php?bbs_no=9&data_no=37" class="blogthumb" style="background-image:url('/skin/thumb/main_img05.jpg');" alt="/skin/thumb/main_img05.jpg" title="/skin/thumb/main_img05.jpg"></a>
+                            <a class="caption" href="http://www.miritc.com/bbs/bbs/view.php?bbs_no=9&data_no=37" style="display: block;">
+                                <h5 class="blog-row-subject">통신공사 <small></small></h5>
+                                <p class="blog-row-contents">정보통신설비의 설치 및 유지보수에 관한 공사와 이에 따르는 부대공사로 유선, 무선, 광선 및 그 밖의 ...</p>
+								<p class="blog-row-regdate">2018-04-03</p>
+                            </a>
+                        </div>
+                    </div></div></div><div class="col-sm-12 intro-boardbox intro-boardbox-type-img intro-boardbox-4"><div class="page-header"><h4>네트워크 분야 <small></small>  <a href="http://www.miritc.com/bbs/img_bbs/index.php?img_bbs_no=4" type="button" class="btn pull-right"><i class="fa fa-plus"></i></a></h4></div><div class="row dh-front-gallery thumbs" id="freewall_w4">                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/ciscogwefree.jpg" alt="ciscogwefree.jpg" title="gwe-free" class="thumbnail" style="background-image:url('/skin/upload/ciscogwefree.jpg');"></a>
+                    </div>                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/그림1_5.png" alt="그림1_5.png" title="controller" class="thumbnail" style="background-image:url('/skin/upload/그림1_5.png');"></a>
+                    </div>                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/ciscoap.jpg" alt="ciscoap.jpg" title="ap" class="thumbnail" style="background-image:url('/skin/upload/ciscoap.jpg');"></a>
+                    </div>                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/ciscoswitch.jpg" alt="ciscoswitch.jpg" title="switch" class="thumbnail" style="background-image:url('/skin/upload/ciscoswitch.jpg');"></a>
+                    </div></div></div><div class="col-sm-12 intro-boardbox intro-boardbox-type-img intro-boardbox-5"><div class="page-header"><h4>보안 분야 <small></small>  <a href="http://www.miritc.com/bbs/img_bbs/index.php?img_bbs_no=5" type="button" class="btn pull-right"><i class="fa fa-plus"></i></a></h4></div><div class="row dh-front-gallery thumbs" id="freewall_w5">                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/sim.jpg" alt="sim.jpg" title="sims" class="thumbnail" style="background-image:url('/skin/upload/sim.jpg');"></a>
+                    </div>                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/alicec.jpg" alt="alicec.jpg" title="simv25" class="thumbnail" style="background-image:url('/skin/upload/alicec.jpg');"></a>
+                    </div>                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/piolink.jpg" alt="piolink.jpg" title="WEBFRONT" class="thumbnail" style="background-image:url('/skin/upload/piolink.jpg');"></a>
+                    </div>                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/penta.jpg" alt="penta.jpg" title="ISIGN+" class="thumbnail" style="background-image:url('/skin/upload/penta.jpg');"></a>
+                    </div></div></div><div class="col-sm-12 intro-boardbox intro-boardbox-type-img intro-boardbox-6"><div class="page-header"><h4>CCTV <small></small>  <a href="http://www.miritc.com/bbs/img_bbs/index.php?img_bbs_no=6" type="button" class="btn pull-right"><i class="fa fa-plus"></i></a></h4></div><div class="row dh-front-gallery thumbs" id="freewall_w6">                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/마을방송.jpg" alt="마을방송.jpg" title="마을방송시스템" class="thumbnail" style="background-image:url('/skin/upload/마을방송.jpg');"></a>
+                    </div>                    <div class="col-md-3">
+                        <a href="http://www.miritc.com/skin/upload/cctv.png" alt="cctv.png" title="전방위 카메라" class="thumbnail" style="background-image:url('/skin/upload/cctv.png');"></a>
+                    </div></div></div>				    </div>
+    <div class="col-sm-12 intro-html-layout">
+		    </div>
+ 
+</div>
+
+
+<!-- Modal -->
+<div class="modal" id="img_sum_modal" tabindex="-1" aria-hidden="true" style="display: none;">
+
+                <input type="hidden" class="now_img" value="1">
+        <div id="" class="modal-content_img_view" style="width:100%;background-color:#000000;margin:0">
+            <center>
+                <input type="hidden" class="img_bbs_no">
+            <!--<div class="row" style="height:120px;">
+                <div class="col-xs-1"><button class="pre_page" style="top:50px"><</button></div>
+                <div class="col-xs-10"><div class="images_sum"></div></div>
+                <div class="col-xs-1"><button class="next_page" style="top:50px">></button>
+                <input type="hidden" class="now_page" value="1"></div>
+            </div>--> 
+                <!-- Slide Image -->
+                <table class="images_sum_main_table" style="background-color:#FFFFFF;text-align: center">
+                    <tr>
+                        <td>
+                            <img class="images_sum_main" src="" style="margin:4px 10px" alt="main images">
+                            <br>
+                            <table width="100%"><tr><td width="50%"></td><td><a class="pre_img" href="#" style="color:#000000;"><span class="glyphicon glyphicon-chevron-left"></span></a></td>
+			    <td><a class="" href="#" data-dismiss="modal" style="color:#000000;"><span class="glyphicon glyphicon-remove-sign btn-lg"></span></a></td>
+			    <td><a class="next_img" href="#"><span class="glyphicon glyphicon-chevron-right" style="color:#000000;"></span></a></td><td width="50%"></td></tr></table>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+
+
+                <a class="carousel-control left pre_img" href="#"><span class="glyphicon glyphicon-chevron-left"></span></a>
+                <a class="carousel-control right next_img" href="#"><span class="glyphicon glyphicon-chevron-right"></span></a>
+
+               
+            <!--<img src="$img_path" class="img-responsive images_sum_main" style="max-height:700px;">-->
+    </div>
+</div>
+<!-- Modal -->
+</div>
+<div class="container footer-social-layout">
+	<div class="row">
+    <div class="col-lg-12 text-center warning socialArea">
+                                <!--<a href="#" target="_blank"><button class="btn btn-link"><img src="http://www.miritc.com/img/kakaotalk.jpg" height="30px" alt="kakaotalk" title="kakaotalk"></button></a>-->
+        								    </div>
+</div>
+		</div>
+</div>
+</div>
+
+
+	<!--사이트맵 v4-->
+    <div class='panel-group sitemap4-toggle' id='accordionsitemap1'>
+      <div class='panel panel-default'>
+	<div class='panel-heading'>
+	  <h4 class='panel-title'>
+	    <a class='accordion-toggle' href='#collapseOne' data-toggle='collapse' data-parent='#accordionsitemap1' style='display:block'>
+	      <i class='fa fa-share-alt'></i> SITE MAP
+	    </a>
+	  </h4>
+	</div>
+	<div class='panel-collapse collapse' id='collapseOne'>
+	  <div class='panel-body'>
+    <div class='menu row sitemap4'>
+		<div class='menu-category list-group'>
+<div class='menu-category-name list-group-item sitemap4-title'><a href='#' target='_self' class='m-1'>회사소개</a></div>
+<a href='/skin/page/cpysub.html' target='_self' class='m-1 menu-item list-group-item sitemap4-list' '> 회사개요 </a>
+<a href='/skin/page/comhello.html' target='_self' class='m-1 menu-item list-group-item sitemap4-list' '> 인사말 </a>
+<a href='/skin/page/comsine.html' target='_self' class='m-1 menu-item list-group-item sitemap4-list' '> 회사연혁 </a>
+<a href='/mod/contact.html' target='_self' class='m-1 menu-item list-group-item sitemap4-list' '> 오시는길 </a>
+<a href='/skin/page/injae.html' target='_self' class='m-1 menu-item list-group-item sitemap4-list' '> 인재채용 </a>
+</div>
+<div class='menu-category list-group'>
+<div class='menu-category-name list-group-item sitemap4-title'><a href='#' target='_self' class='m-4'>사업영역</a></div>
+<a href='/skin/page/combu.html' target='_self' class='m-4 menu-item list-group-item sitemap4-list' '> SI </a>
+<a href='/skin/page/comconsul.html' target='_self' class='m-4 menu-item list-group-item sitemap4-list' '> 컨설팅 </a>
+<a href='/skin/page/comtong.html' target='_self' class='m-4 menu-item list-group-item sitemap4-list' '> 통신공사 </a>
+</div>
+<div class='menu-category list-group'>
+<div class='menu-category-name list-group-item sitemap4-title'><a href='#' target='_self' class='m-8'>제품소개</a></div>
+<a href='/skin/page/comindu.html' target='_self' class='m-8 menu-item list-group-item sitemap4-list' '> Network </a>
+<a href='/skin/page/comsecurity.html' target='_self' class='m-8 menu-item list-group-item sitemap4-list' '> security </a>
+<a href='/skin/page/CCTV.html' target='_self' class='m-8 menu-item list-group-item sitemap4-list' '> CCTV </a>
+</div>
+<div class='menu-category list-group'>
+<div class='menu-category-name list-group-item sitemap4-title'><a href='#' target='_self' class='m-9'>Contact US</a></div>
+<a href='/mod/contact_mail.html' target='_self' class='m-9 menu-item list-group-item sitemap4-list' '> 고객문의 </a>
+<a href='/bbs/bbs/?bbs_no=11' target='_self' class='m-9 menu-item list-group-item sitemap4-list' value='img_bbs_no=11''> 회사소개 </a>
+<a href='/bbs/bbs/?bbs_no=10' target='_self' class='m-9 menu-item list-group-item sitemap4-list' value='img_bbs_no=10''> NEWS </a>
+</div>
+    </div>
+
+	</div>
+      </div>
+
+    </div>
+    </div>
+
+    <!--사이트맵 v4 END-->
+	</div></div></div>
+<!-- Body End -->
+<!-- Footer -->
+<div class="footer_copy">
+    <div class="col-lg-12 text-center">
+    <div class="com_info">
+	<p><strong>(주)미르정보기술&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;MIRINFORTECH CO., LTD.</strong></p>
+        <p><strong>본사.</strong>&nbsp;&nbsp;세종특별자치시 한누리대로 312, 402호 (나성동, 노블비즈니스타운)&nbsp;&nbsp;&nbsp;&nbsp;<strong>TEL.</strong>&nbsp;&nbsp;044-999-3328&nbsp;&nbsp;&nbsp;&nbsp;</strong> <strong>FAX.</strong>&nbsp;&nbsp;044-999-3329</p>
+</p>
+	<p><strong>기술연구소.</strong>&nbsp;&nbsp;대전광역시 유성구 반석로9, 203호 (반석동, 더존타워)&nbsp;&nbsp;&nbsp;&nbsp;<strong>TEL.</strong>&nbsp;&nbsp;042-826-3467&nbsp;&nbsp;&nbsp;&nbsp;<strong></p>
+	<p>COPYRIGHT ⓒ 2015 MIRINFORTECH CO., LTD. ALL RIGHTS RESERVED.</p>
+</div><br>    </div>
+</div>
